syntax = "proto3";

package web3;

service EthWeb3 {
    rpc SignedTypeMsg (TypeMsg) returns (Signed) {
    }
    rpc RecoverSignedTypeMsg (RecoverMsg) returns (RecoverAddress) {
    }
    rpc DecodeTokenId (TokeIdMsg) returns (Coordinate) {
    }
    rpc EthDerivedAddressVerify (EthDerivedAddress) returns (EthVerfiyResult) {
    }
    rpc RecoverPersonalSigned (RecoverMsg) returns (RecoverAddress) {
    }
}

message TypeMsg {
    string msg = 1;
    string private_key = 2;
}

message Signed {
    string message = 1;
}

message RecoverMsg {
    string msg = 1;
    string signed = 2;
}

message RecoverAddress {
    string message = 1;
}

message TokeIdMsg {
    string address = 1;
    string tokenId = 2;
}

message Coordinate {
    string message = 1;
}

message EthVerfiyResult {
    bool message = 1;
}

message EthDerivedAddress{
    string extendedPublicKey = 1;
    string path = 2;
    string address = 3;
}